force-app/main/default/objects/ampi__Submission__c/ampi__Submission__c.object-meta.xml
<CustomObject>
    <description>This object stores both templates and responses for submissions/assessments in Amp Impact.</description>
    <label>Submission</label>
    <nameField>
        <displayFormat>SUB-{00000}</displayFormat>
        <label>Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>