force-app/main/default/objects/ampi__Submission__c/fields/ampi__Description__c.field-meta.xml
<CustomField>
    <fullName>ampi__Description__c</fullName>
    <description>This text field stores the qualitative description of a Submission record</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>