force-app/main/default/objects/ampi__Submission__c/fields/ampi__Guidelines__c.field-meta.xml
<CustomField>
    <fullName>ampi__Guidelines__c</fullName>
    <description>Long text area field to store any guidelines for a grantee/investee when filling out a submission</description>
    <label>Guidelines</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>