force-app/main/default/objects/ampi__Submission__c/fields/ampi__Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>ampi__Overall_Score__c</fullName>
    <description>This number field stores the input score that is assigned to an entire response Submission. Users will either have to input the value manually, or an admin can create automation to populate this field based on the values in child Question records.</description>
    <label>Overall Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>