force-app/main/default/objects/ampi__Submission__c/fields/ampi__Parent_Submission__c.field-meta.xml
<CustomField>
    <fullName>ampi__Parent_Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field tracks the parent Submission Template for a response Submission</description>
    <label>Initially Copied From</label>
    <referenceTo>ampi__Submission__c</referenceTo>
    <relationshipLabel>Assigned Submissions</relationshipLabel>
    <relationshipName>Child_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>