force-app/main/default/objects/ampi__Submission__c/fields/ampi__Related_To__c.field-meta.xml
<CustomField>
    <fullName>ampi__Related_To__c</fullName>
    <description>This text field stores the name of the Salesforce Object that is related to this Submission template</description>
    <inlineHelpText>Enter the name of the object (e.g. Account, Project) that is related to this template.</inlineHelpText>
    <label>Related To?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>