force-app/main/default/objects/ampi__Submission__c/fields/ampi__Response_Locked__c.field-meta.xml
<CustomField>
    <fullName>ampi__Response_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to control whether the Submission Response Lightning component is editable or read-only</description>
    <label>Response Locked</label>
    <type>Checkbox</type>
</CustomField>