force-app/main/default/objects/ampi__Submission__c/fields/ampi__Review_Locked__c.field-meta.xml
<CustomField>
    <fullName>ampi__Review_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to control whether the Submission Scoring Lightning component is read-only or editable</description>
    <label>Review Locked</label>
    <type>Checkbox</type>
</CustomField>