force-app/main/default/objects/ampi__Submission__c/fields/ampi__Reviewer_Comments__c.field-meta.xml
<CustomField>
    <fullName>ampi__Reviewer_Comments__c</fullName>
    <description>Long text area field to store any comments that the reviewer might have regarding the Submission response as a whole</description>
    <label>Reviewer Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>