force-app/main/default/objects/ampi__Submission__c/fields/Risk_Review__c.field-meta.xml
<CustomField>
    <fullName>Risk_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk Review</label>
    <referenceTo>ampi__Risk_Assessment__c</referenceTo>
    <relationshipLabel>Submissions</relationshipLabel>
    <relationshipName>Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>