force-app/main/default/objects/ampi__Submission__c/recordTypes/ampi__Submission.recordType-meta.xml
<RecordType>
    <fullName>ampi__Submission</fullName>
    <active>true</active>
    <description>Submission created from a master Template to be filled out and reviewed</description>
    <label>Submission</label>
</RecordType>