force-app/main/default/objects/ampi__Submission__c/recordTypes/ampi__Template.recordType-meta.xml
<RecordType>
    <fullName>ampi__Template</fullName>
    <active>true</active>
    <description>Template versions of submissions that can be used to create Submissions for completion by other users</description>
    <label>Template</label>
</RecordType>